--- a/style.css
+++ b/style.css
@@ -1,82 +1,92 @@
-html {
-  font-size: 62.5%;
-  box-sizing: border-box;
+body{
+    background-color: gray;
+    width: 100%;
+    height: 100vh;
+    font-family: sans-serif;
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
 }
 
-*, *::before, *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
+hr{
+    color: white;
+    border: solid 0.1px #3C3D4F;
+    border-bottom: none;
+    width: 95%;
 }
 
-.calculator {
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
+.container{
+    padding: 20px;
+    width: 400px;
+    height: 85vh;
+    border-radius: 10px;
+    background-color: #252530;
+    display: flex;
+    flex-direction: column;
+    margin: 0 35%;
+}
+ 
+.upperpart{
+    height: 30vh;
+    width: auto;
+    border-radius: 10px 10px 0 0;
 }
 
-.calculator-screen {
-  width: 100%;
-  font-size: 5rem;
-  height: 80px;
-  border: none;
-  background-color: #252525;
-  color: #fff;
-  text-align: right;
-  padding-right: 20px;
-  padding-left: 10px;
+.lowerpart{
+    height: 70vh;
+    display: grid;
+    border-color: wheat;
+    grid-template-columns: repeat(4, 1fr);
 }
 
-button {
-  height: 60px;
-  background-color: #fff;
-  border-radius: 3px;
-  border: 1px solid #c4c4c4;
-  background-color: transparent;
-  font-size: 2rem;
-  color: #333;
-  background-image: linear-gradient(to bottom,transparent,transparent 50%,rgba(0,0,0,.04));
-  box-shadow: inset 0 0 0 1px rgba(255,255,255,.05), inset 0 1px 0 0 rgba(255,255,255,.45), inset 0 -1px 0 0 rgba(255,255,255,.15), 0 1px 0 0 rgba(255,255,255,.15);
-  text-shadow: 0 1px rgba(255,255,255,.4);
+.item{
+    justify-self: center;
+    align-self: center;
+    height: 70px;
+    width: 70px;
+    border-radius: 50px;
+    text-align: center;
+    line-height: 70px;
+    background-color: #2E2F3E;
+    color: white;
+    font-size: 1.5rem;  
 }
 
-button:hover {
-  background-color: #eaeaea;
+.operators{
+    background-color: #3C3D4F;
+    color: #F0B410;
+    font-size: 1.8rem;
+    
 }
 
-.operator {
-  color: #337cac;
+.clear{
+    font-weight: 500;
+    color: #F87110;
 }
 
-.all-clear {
-  background-color: #f0595f;
-  border-color: #b0353a;
-  color: #fff;
+.equals{
+    background-color: #F0B410;
+    font-size: 2rem;
 }
 
-.all-clear:hover {
-  background-color: #f17377;
+.gameover{
+    background-color: red;
 }
 
-.equal-sign {
-  background-color: #2e86c0;
-  border-color: #337cac;
-  color: #fff;
-  height: 100%;
-  grid-area: 2 / 4 / 6 / 5;
+#upper{
+    height: 90px;
+}
+#middle{
+    height: 90px;
+}
+#lower{
+    display: flex;
+    justify-content: space-around;
+    gap: 250px;
+    color: #F0B410;
+    font-size: 1.8rem;
+}
+.click:hover{
+    background-color: grey;
 }
 
-.equal-sign:hover {
-  background-color: #4e9ed4;
-}
-
-.calculator-keys {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 20px;
-  padding: 20px;
-}
