--- a/style.css
+++ b/style.css
@@ -1,94 +1,68 @@
-body{
-    background-color: gray;
-    width: 100%;
-    height: 100vh;
-    font-family: sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+body {
+    background: black;
+    color: white;
     display: flex;
+    align-items: center;
     justify-content: center;
-    box-sizing: border-box;
+    padding-top: 10rem;
 }
 
-hr{
-    color: white;
-    border: solid 0.1px #3C3D4F;
-    border-bottom: none;
-    width: 95%;
-}
-
-.container{
-    padding: 20px;
-    width: 400px;
-    height: 85vh;
-    border-radius: 10px;
-    background-color: #252530;
+.calculator {
     display: flex;
+    align-items: center;
     flex-direction: column;
-    margin: 0 35%;
-}
- 
-.upperpart{
-    height: 30vh;
-    width: auto;
-    border-radius: 10px 10px 0 0;
-}
-
-.lowerpart{
-    height: 70vh;
-    display: grid;
-    border-color: wheat;
-    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    width: 290px;
+    backdrop-filter: blur(16px) saturate(180%);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    padding: 20px;
 }
 
-.item{
-    justify-self: center;
-    align-self: center;
-    height: 70px;
-    width: 70px;
-    border-radius: 50px;
-    text-align: center;
-    line-height: 70px;
-    background-color: #2E2F3E;
+#screen {
+    font-size: 45px;
     color: white;
-    font-size: 1.5rem;  
+    border-radius: 20px;
+    text-align: end;
+    width: 100%;
+    padding: 0px 10px;
+    border: none;
+    outline: none;
+    backdrop-filter: blur(16px) saturate(180%);
+    background: linear-gradient(45deg, rgb(114, 114, 114), #494949);
+    border-radius: 12px;
 }
 
-.operators{
-    background-color: #3C3D4F;
-    color: #F0B410;
-    font-size: 1.8rem;
-    
-}
-
-.clear{
-    font-weight: 500;
-    color: #F87110;
-}
-
-.equals{
-    background-color: #F0B410;
-    font-size: 2rem;
-}
-
-.gameover{
-    background-color: red;
-}
-
-#upper{
-    height: 90px;
-}
-#middle{
-    height: 90px;
+button {
+    height: 55px;
+    width: 55px;
+    font-size: 20px;
     color: white;
-}
-
-#lower{
+    border: none;
+    outline: none;
+    border-radius: 50%;
+    margin: 8px;
     display: flex;
-    justify-content: space-around;
-    gap: 250px;
-    color: #F0B410;
-    font-size: 1.8rem;
-}
-.click:hover{
-    background-color: grey;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-weight: 600;
+    backdrop-filter: blur(16px) saturate(180%);
+    background: linear-gradient(45deg, transparent, #494949);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
+.equalsToBtn {
+    width: 190%;
+    border-radius: 25px;
+    background: deepskyblue;
+    color: white;
+}
